# green-gauge-core

./: .gitignore  CMakeLists.txt  README.md  build.sh  cppcheck.conf  flash.sh  flash2.sh  install_cmd  partitions.csv  platformio.ini  resources.sh  sdkconfig  sdkconfig.old  tx_docs.md
.github/: RELEASE.md
.github/scripts/: upload_backblaze.py
.github/workflows/: CI-PR.yml  CN001-SN001-BUILD.yml  CN001-SN001-FIRMWARE_DEPLOYMENT.yml  TAG.yml  keys.yaml  test.yml
components/datafarm__cli/: CMakeLists.txt
components/datafarm__cli/include/: cli.hpp
components/datafarm__cli/src/: main.c  main.cpp
components/espressif__cbor/tinycbor/src/: cborencoder.c  open_memstream.c
components/espressif__coap/libcoap/examples/lwip/config/: coap_config.h
docs/: README copy 2.md
examples/: coap_msg.cpp
include/: cli_data.h  cli_th.h  cmd.h  config.h  crypt.h  eeprom.h  err_handle.h  hash_cache.h  https_comms.h  hw.h  init.h  interrupts.h  lora_listener.h  main_app.h  msg_queue.h  pack_def.h  th_handler.h  utils.h
includes/: cli.h  config.h
main/: CMakeLists.txt  idf_component.yml
main/include/: ATCommandHndlr.hpp  ActivatePacket.hpp  ActivatePkt.hpp  AppRuntime.hpp  BatteryPacket.hpp  CLI.hpp  CborDecoder.hpp  Coap.hpp  CoapOTAUpdater.hpp  CoapPktAssm.hpp  Communication.hpp  Config.hpp  DeviceConfig.hpp  EEPROMConfig.hpp  EthernetConnection.hpp  GPS.hpp  GpsUpdatePkt.hpp  HwTypes.hpp  I2CDriver.hpp  IConnection.hpp  IPacket.hpp  Key.hpp  Logger.hpp  MeasurementType.hpp  NPK.hpp  Node.hpp  OTAUpdater.hpp  Packet.hpp  Ping.hpp  ReadingPacket.hpp  ReadingPkt.hpp  SimConnection.hpp  TelnetSession.hpp  Types.hpp  UARTConsole.hpp  UARTDriver.hpp  Utils.hpp  WiFiConnection.hpp
main/include/comm/: Communication.hpp
main/include/ota/: OTAUpdater.hpp
main/include/packet/: ReadingPacket.hpp
main/src/: ActivatePacket.cpp  BatteryPacket.cpp  CLI.cpp  Communication.cpp  EEPROMConfig.cpp  EthernetConnection.cpp  IPacket.cpp  Node.cpp  OTAUpdater.cpp  Packet.cpp  ReadingPacket.cpp  SimConnection.cpp  WiFiConnection.cpp  main.cpp
main/src/app/: AppRuntime.cpp
main/src/io/: Coap.cpp  CoapPktAssm.cpp  NPK.cpp
main/src/io/drivers/: EEPROMConfig.cpp  UARTDriver.cpp
main/src/io/interfaces/: ATCommandHndlr.cpp
main/src/mem/: EEPROMConfig.cpp
main/src/net/: ActivatePkt.cpp  Communication.cpp  EthernetConnection.cpp  GPS.cpp  IPacket.cpp  ReadingPkt.cpp  SimConnection.cpp  WiFiConnection.cpp
main/src/net/adapters/: Communication.cpp  EthernetConnection.cpp  SimConnection.cpp  TelnetSession.cpp  WiFiConnection.cpp
main/src/net/cbor_pkt_build/: ActivatePkt.cpp  GpsUpdatePkt.cpp  Key.cpp  ReadingPkt.cpp
main/src/net/coap_pkt_build/: CoapPktAssm.cpp
main/src/other/: Utils.cpp  utils.cpp
main/src/routine/: GPS.cpp  NPK.cpp
main/src/shell/: CLI.cpp  Commands.cpp
main/src/sys/: ATCommandHndlr.cpp  CborDecoder.cpp  CoapOTAUpdater.cpp  I2CDriver.cpp  Logger.cpp  OTAUpdater.cpp  UARTConsole.cpp  UARTDriver.cpp
main/src/tools/: Ping.cpp
main/src/uspace/: ActivatePacket.cpp  BatteryPacket.cpp  CLI.cpp  Node.cpp  ReadingPacket.cpp  main.cpp
manf-info/: build.sh
manf-info/NT0052/: NT0052.csv
manf-info/NT0067/: NT0067.csv
manf-info/NT0097/: NT0097.csv
src/: bms.cpp  cli.cpp  cli_data.cpp  cli_th.cpp  cmd.cpp  crypt.cpp  eeprom.cpp  err_handle.cpp  hash_cache.cpp  https_comms.cpp  hw.cpp  init.cpp  interrupts.cpp  lora_listener.cpp  main.cpp  main_app.cpp  msg_queue.cpp  mutex_h.cpp  pack_def.cpp  rs485_interface.cpp  th_handler.cpp  utils.cpp
src/cli/: cli.cpp  cli.h
src/cmd/: cmd.cpp  cmd.h
src/crypt/: crypt.cpp  crypt.h
src/eeprom/: eeprom.cpp  eeprom.h
src/hash_cache/: hash_cache.cpp  hash_cache.h
src/http/: https_comms.cpp  https_comms.h
src/lora/: lora_listener.cpp  lora_listener.h
src/main_app/: main_app.cpp
src/mh/: mutex_h.cpp  mutex_h.h
src/ntp/: ntp.cpp  ntp.h
src/pack_def/: pack_def.cpp  pack_def.h
src/rs485/: rs485_interface.cpp  rs485_interface.h
src/th/: th_handler.cpp  th_handler.h
